style.css
/* ... */
.video-wrapper,
.video-overlay {
  position: relative;
}

.video-overlay::after {
  background: rgba(0, 0, 0, 0.25) none repeat scroll 0 0;
  content: "";
  height: 100%;
  left: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  transition: all 0.3s ease 0s;
  width: 100%;
}

.video-wrapper:hover .video-overlay::after {
  opacity: 1;
}

.video-overlay>img {
  width: 100%;
}

.video-popup {
  bottom: 0;
  color: #ffffff;
  cursor: pointer;
  font-size: 72px;
  height: 60px;
  left: 0;
  line-height: 58px;
  margin: auto;
  opacity: 0;
  position: absolute;
  right: 0;
  top: 0;
  transition: all 0.5s ease 0s;
  width: 60px;
  z-index: 2;
}

.video-popup i {
  line-height: 58px;
}

.video-wrapper .video-popup:hover {
  color: #c6c6c6;
}

.video-wrapper:hover .video-popup {
  opacity: 1;
}

/*----------------------------------------*/
/*  2. Room Area
/*----------------------------------------*/
.room-area .container-fluid {
  padding: 0;
}

.single-room {
  float: none;
  width: 50%;
  position: relative;
}

.single-room.small {
  width: 50%;
}

.single-room.large {
  width: 50%;
}

.single-room.medium {
  width: 50%;
}

.single-room img {
  max-width: 100%;
}

.room-hover {
  bottom: 0;
  height: 100%;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
}

.room-hover:after {
  background-color: rgba(0, 0, 0, 0.5);
  bottom: 0;
  content: "";
  height: 100%;
  left: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  transition: all 0.3s ease-in 0.4s;
  width: 100%;
}

.single-room:hover .room-hover:after {
  opacity: 1;
  transition-delay: 0.2s;
}

.single-room>h3 {
  color: #ffffff;
  left: 50%;
  margin-bottom: 19px;
  opacity: 1;
  padding: 0 20px;
  position: absolute;
  text-align: center;
  top: 50%;
  transform: translate(-50%, -50%);
  transition: all 0.2s ease 0s;
  width: 100%;
  z-index: 1;
}

.single-room:hover>h3 {
  opacity: 0;
  transition-delay: 0s;
}

.hover-text>h3 {
  color: #ffffff;
  left: 50%;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
  transition: all 0.3s ease 0s;
  width: 100%;
}

.single-room:hover .hover-text>h3 {
  top: 26%;
}

.hover-text>p {
  bottom: 41%;
  color: #ffffff;
  opacity: 0;
  padding: 0;
  position: absolute;
  transform: translateY(100px);
  transition: all 0.3s ease-in-out 0.1s;
}

.large .hover-text>p {
  padding: 0 10px;
}

.single-room:hover p {
  opacity: 1;
  transform: translateY(0px);
  transition-delay: 0.2s;
}

.hover-text>h3:hover a {
  color: #b5876d;
}

.hover-text {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 2;
}

.hover-text .room-btn {
  bottom: 25%;
  left: 0;
  opacity: 0;
  position: absolute;
  right: 0;
  transform: translateY(100px);
  transition: all 0.3s ease-in-out 0.1s;
}

.single-room:hover .room-btn {
  opacity: 1;
  transform: translateY(0px);
  transition-delay: 0.5s;
}

.hover-text .default-btn {
  display: inline-block;
  line-height: 38px;
  margin-top: 37px;
  padding: 0 22px;
}

.p-amount {
  bottom: 26px;
  color: #ffffff;
  position: absolute;
  right: 28px;
  transform: translateX(100px);
  transition: all 0.3s ease-in-out 0.1s;
  z-index: 2;
}

.p-amount>span {
  display: block;
  font-family: "Raleway", sans-serif;
  font-size: 30px;
  font-weight: 700;
}

.p-amount>span.count {
  font-size: 15px;
  font-weight: 400;
  padding-top: 3px;
}

.single-room:hover .p-amount {
  opacity: 1;
  transform: translateX(0px);
  transition-delay: 0.3s;
}

.single-room.large:hover .hover-text>h3 {
  top: 29%;
}

.single-room.large .hover-text>p {
  bottom: 44%;
}

.single-room.large .hover-text>.room-btn {
  bottom: 26%;
}

/*----------------------------------------*/
/*  3. Services Area
/*----------------------------------------*/
.nav.nav-tabs {
  border: 0 none;
}

.nav-tabs>li>a {
  background: #f1f1f1 !important;
  border: 0 none;
  border-radius: 0;
  line-height: 24px;
  margin: 0;
  padding: 10px 0 12px;
}

.title {
  font-family: "raleway";
  font-size: 18px;
  font-weight: 700;
  margin-bottom: 6px;
}

span.title,
span.text {
  color: #444444;
  display: block;
  padding-left: 80px;
}

span.image {
  display: block;
  left: 20px;
  position: absolute;
  top: 27px;
}

.nav-tabs>.nav-item {
  margin-bottom: 20px;
  width: 100%;
  position: relative;
}

.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link.active {
  background-color: #b5876d !important;
}

.nav-tabs .nav-link.active .text {
  color: #fff;
}

.nav-tabs .nav-link.active .title {
  color: #fff;
}

.nav-tabs>li>a span {
  transition: all 0.2s ease 0s;
}

.nav-tabs>li:last-child {
  margin: 0;
}

span.image.s-img {
  display: none;
}

.nav-tabs>li>a.active span.s-img,
.nav-tabs>li>a.active:focus span.s-img,
.nav-tabs>li>a.active:hover span.s-img {
  display: block;
}

/*----------------------------------------*/
/*  4. Fun Factor Area
/*----------------------------------------*/
.fun-factor-area {
  padding: 57px 0 69px;
  z-index: -2;
}

.fun-factor-area.overlay-dark:before {
  z-index: -1;
}

.single-fun-factor>h1 {
  color: #ffffff;
  font-family: "Lato", sans-serif;
  font-size: 60px;
  font-weight: 700;
}

.single-fun-factor>h4 {
  color: #ffffff;
  font-family: "Lato", sans-serif;
  font-size: 18px;
  font-weight: 400;
  padding-top: 17px;
  text-transform: uppercase;
}

.advertise-area {
  z-index: -2;
}

.advertise-area.overlay-dark:before {
  z-index: -1;
}

/*----------------------------------------*/
/*  5. Gallery Area
/*----------------------------------------*/
.gallery-item {
  width: 25%;
  overflow: hidden;
}

.thumb>img {
  max-width: 100%;
}

.gallery-hover a {
  border: 1px solid #fbfafa;
  border-radius: 50%;
  color: #ffffff;
  display: inline-table;
  font-size: 24px;
  height: 38px;
  margin: 0 8px;
  position: relative;
  text-align: center;
  transition: all 0.2s linear 0s;
  width: 38px;
}
/* ... */

